--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.11.0",
     "chunks": "^0.2.6",
     "firebase": "^12.0.0",
